[project]
name = "gen-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
	"ipykernel>=7.3.0",
	"langchain",
	"langchain-groq>=1.1.3",
	"langchain-openai>=1.3.0",
	"langgraph>=1.2.4",
	"python-dotenv>=1.2.2",
	"streamlit>=1.58.0",
]
